--- a/style.css
+++ b/style.css
@@ -2,49 +2,41 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    list-style: none;
 }
 
 body {
     font-family: Arial, sans-serif;
 }
 
-@media (max-width: 600px) {
-    header {
-        padding: 10px;
-    }
 
-    header h1 {
-        font-size: 20px;
-    }
+label.logo .dropdown {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: white;
+    width: 150px;
+    border: 1px solid #ddd;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
 
-    nav a {
-        font-size: 12px;
-        margin: 0 5px;
-    }
 
-    .cart {
-        top: 10px;
-        right: 10px;
-    }
+label.logo:hover .dropdown {
+    display: block;
+}
 
-    .cart img {
-        width: 20px;
-        height: 20px;
-    }
 
-    .product-section {
-        gap: 10px;
-        padding: 10px;
-    }
+label.logo .dropdown li {
+    display: block;
+    margin: 0;
+    padding: 10px;
+}
 
-    .product h2 {
-        font-size: 14px;
-    }
-
-    .product button {
-        padding: 7px 12px;
-        font-size: 11px;
-    }
+label.logo .dropdown li a {
+    color: black;
+    text-decoration: none;
+    font-size: 16px;
 }
 
 header {
@@ -70,12 +62,83 @@ header h1 a{
 nav {
     margin-bottom: 20px;
 }
+label.logo {
+    color: white;
+    font-size: 25px;
+    line-height: 80px;
+    padding: 0 100px;
+    font-weight: bold;
+  }
+  #check {
+    display: none;
+  }
 
 nav a {
     text-decoration: none;
     color: black;
     margin: 0 10px;
     font-size: 14px;
+}
+
+nav ul {
+    float: right;
+    margin-right: 20px;
+  }
+
+  nav ul li {
+    display: inline-block;
+    line-height: 80px;
+    margin: 0 5px;
+  }
+
+
+
+  @media (max-width: 600px) {
+    header {
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    header h1 {
+        font-size: 24px;
+        letter-spacing: 2px;
+        margin-bottom: 10px;
+        align-items: center;
+    }
+
+    label.logo {
+        display: inline-block;
+        font-size: 22px;
+        align-items: flex-start;
+        
+    }
+
+    nav ul {
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        background: #2c3e50;
+        top: 80px;
+        left: -100%;
+        text-align: center;
+        transition: all .5s;
+    }
+
+    nav ul li {
+        display: block;
+        margin: 50px 0;
+        line-height: 30px;
+    }
+
+    #check:checked ~ ul {
+        left: 0;
+    }
+
+    .cart {
+        position: static;
+        margin-right: 20px;
+    }
 }
 
 .cart {
