--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ label.logo .dropdown li {
 }
 
 label.logo .dropdown li a {
-    color: black;
+    color: rgb(243, 237, 237);
     text-decoration: none;
     font-size: 16px;
 }
@@ -92,9 +92,14 @@ nav ul {
   }
 
   nav ul li {
+    
     display: inline-block;
-    line-height: 80px;
+    line-height: 50px;
    
+  }
+  nav ul li:hover {
+    border-bottom: 1px solid rgb(26, 24, 24); 
+    
   }
 
  
@@ -133,18 +138,20 @@ nav ul {
     }
 
     label.logo .dropdown {
-        display: block;
-        position: absolute;
-        text-align: center;
         
-        top: 100%;
+        position: absolute;
+        height: 100vh;
+    
+        
+        top: 0;
         left: 0;
-        background-color: rgb(179, 172, 172);
-        width: 300px;
-        height: 300px;
+        background-color: rgb(102, 97, 97);
+        width: 200px;
+      
         border: 1px solid rgb(39, 38, 38);
         box-shadow: 4px  5px 8px rgba(0, 0, 0, 0.2);
     }
+ 
     
 
     nav ul {
