--- a/style.css
+++ b/style.css
@@ -1,273 +1,101 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    list-style: none;
-}
 
-body {
-    font-family: Arial, sans-serif;
-}
+ /* Adding this for styling */
 
 
-label.logo .dropdown {
-    display: none;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    background-color: white;
-    width: 150px;
-    border: 1px solid rgb(95, 87, 87);
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-}
-
-
-
-label.logo:hover .dropdown {
-    display: block;
-    
-}
-
-
-label.logo .dropdown li {
-    display: block;
-    margin: 0;
-    
-    padding-top: 5px;
-}
-
-label.logo .dropdown li a {
-    color: rgb(243, 237, 237);
+.nav-link {
     text-decoration: none;
-    font-size: 16px;
-}
-
-.content {
-    width: 100%;
-   
+    padding-bottom: 5px;
+  }
+  
+  .nav-link.active {
+    border-bottom: 2px solid #000; 
+  }
+  
+ 
+  .nav-link {
+    text-decoration: none;
+    padding-bottom: 5px;
+  }
+  
+  .nav-link.active {
+    border-bottom: 2px solid #000; 
+  }
+  
+  /* cards */
+  .card-item {
+    text-align: center;
+    margin-bottom: 1.6rem;
     position: relative;
-    display: flex;
-    flex-direction: column-reverse;
-    
-    align-items: center;
-    padding: 20px;
-   
-}
-
-.content h1 {
-    font-size: 18px;
-    letter-spacing: 2px;
-    margin-bottom: 10px;
-}
-.content h1 a{
+    top:200%;
+  }
+  .container h2 {
+    margin: 1rem;
+    font-weight: normal;
+    font-size: medium;
   
-    text-decoration: none;
-    color: black;
-}
-
-
-label.logo {
-  
-    display: none;
-
-    font-size: 2px;
-    line-height: 5px;
-   
-    font-weight: bold;
   }
-  #check {
-    display: none;
+  .images {
+    object-fit: cover;
   }
-
-nav a {
-    text-decoration: none;
-    color: black;
-    margin: 0 10px;
-    font-size: 14px;
-}
-
-nav ul {
-    float: right;
-    margin-right: 10px;
-  }
-
-  nav ul li {
-    
-    display: inline-block;
-    line-height: 50px;
-   
-  }
-  nav ul li:hover {
-    border-bottom: 1px solid rgb(26, 24, 24); 
-    
-  }
-
- 
-  .demo{
-    height: 60px;
-    width: 100px;
-    background-color: black;
-    color: white;
-    justify-content: center;
-    align-items: center;
-
-  }
-
-  
-
-
-  @media only screen and (max-width: 767px) {
-    .content {
-        flex-direction: row;
-        justify-content: flex-start;
-        align-items: center;
-      
-       
-    }
-    .shop {
-   
-        position: absolute;
-        top: 17px;
-        right: 44%;
-    }
-
-    label.logo {
-        display: block;
-        
-        
-    }
-
-    label.logo .dropdown {
-        
-        position: absolute;
-        height: 100vh;
-    
-        
-        top: 0;
-        left: 0;
-        background-color: rgb(102, 97, 97);
-        width: 200px;
-      
-        border: 1px solid rgb(39, 38, 38);
-        box-shadow: 4px  5px 8px rgba(0, 0, 0, 0.2);
-    }
- 
-    
-
-    nav ul {
-     display: none;
-     
-       
-    }
-
-    nav ul li {
-        
-        line-height: 55px;
-    }
-
- 
-}
-
-
-.cart {
-   
-    position: absolute;
-    top: 20px;
-    right: 20px;
-  
-}
-.cart a{
-    text-decoration: none;
-    color: black;
-
-}
-
-
-
-
-.product-section {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-   
-    width: 100%;
-}
-
-.product-section.side-by-side {
-    flex-direction: row;
-    justify-content: center;
-    gap: 0;
-    padding-top: 20px;
-    
-    
-}
-
-.product {
-    text-align: center;
-    width: 100%;
-    
-}
-
-.product img {
-   
-    width: 100%;
-    height: 250px;
-   
-}
-
-
-.product h2 {
-    margin: 10px 0;
-    font-size: 18px;
-}
-
-.product button {
-    padding: 10px 20px;
-    font-size: 14px;
-    border: 1px solid black;
-    background-color: white;
+  .shop-button {
+    border: none;
     cursor: pointer;
-    transition: background-color 0.3s;
-}
-
-.product button:hover {
-    background-color: black;
-    color: white;
-}
-
-.footer-section {
+    background-color: #ffff;
+    border: 2px solid black;
+    height: 2.5rem;
+    width: 140rem;
+    
+  
+  }
+  .sub-container {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    bottom: 0;
-    margin-top: 4%;
-
-    width: 100%;
-}
-
-.demo {
-    margin-top: 5px;
-    padding: 10px 20px;
-    justify-content: center;
-    text-align: center;
-    width: 140px;
-    height: 50px;
-    
-}
-.demo h3 {
-    margin: 10px 0;
-    font-size: 15px;
-}
-
-.footer-section p{
-    padding: 5px;
-    font-size: 15px;
-    font-style: italic;
-    
-    color: rgb(80, 77, 77);
-}
-
-
-
-
+    font-size: x-small;
+  }
+  .mens-tshirts {
+    width: 50%;
+  }
+  .ladies-tshirts {
+    width: 50%;
+  }
+  
+  /* small */
+  @media (min-width: 300px) {
+    .card-item {
+      width: 100%;
+      height: 354px;
+    }
+    .images {
+      width: 100%;
+      height: 240px;
+    }
+    .shop-button {
+      width: 10rem;
+      margin-top: 1rem;
+    }
+    .container{
+      margin-top: 20px;
+    }
+  }
+  /* medium */
+  @media (min-width: 768px) {
+    .card-item {
+      width: 100%;
+      height: 450px;
+    }
+    .images {
+      width: 100%;
+      height: 320px;
+    }
+  }
+  /* large */
+  @media (min-width: 1440px) {
+    .images {
+      width: 100%;
+      height: 320px;
+    }
+    .card-item {
+      width: 1440px;
+      height: 450px;
+    }
+  }
+  
