--- a/checkout.css
+++ b/checkout.css
@@ -2,8 +2,6 @@ h5,
 h2 {
   font-weight: 600;
 }
-
-/* heading */
 .heading {
   margin-top: 3rem;
   margin-bottom: 2rem;
@@ -18,10 +16,9 @@ h2 {
   color: gray;
   font-size: small;
 }
-/* container */
 .container {
   display: flex;
-  /* flex-direction: row; */
+ 
   justify-content: space-between;
   margin: 8 auto;
   padding: 4rem 6rem;
@@ -35,7 +32,6 @@ h2 {
   flex-basis: 45%;
   background-color: 2px solid rgb(54, 50, 50);
 }
-/* floating label */
 .floating-label {
   position: relative;
   margin: 1rem 0;
@@ -83,15 +79,12 @@ h2 {
 .checkbox-data {
   margin-top: 1rem;
 }
-
-/* payment methods */
 .payment-method {
   display: flex;
   flex-direction: column;
   flex-basis: 45%;
   width: 50%;
 }
-/* expiry */
 .expiry {
   display: flex;
   justify-content: space-between;
@@ -108,7 +101,6 @@ h2 {
   background-color: transparent;
   width: 33%;
 }
-/* .order-summary */
 .order-summary {
   display: flex;
   flex-direction: column;
@@ -135,7 +127,7 @@ h2 {
   margin-bottom: 1px;
 }
 
-/* small */
+/* mobile */
 @media (min-width: 300px) {
   .container {
     display: flex;
@@ -168,8 +160,8 @@ h2 {
   }
 }
 
-/* medium */
-@media (min-width: 769px) {
+/* mid-size */
+@media (min-width: 760px) {
   .container {
     display: flex;
     flex-direction: row;
